API_Gateway_Envoy/HTTPRoute-Nginx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.nginx.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nginx
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
